[package]
name = "untitled"
version = "0.1.0"
edition = "2024"

# 1. This block is MANDATORY. It tells Rust to compile a C-compatible
# shared library (.so, .dll, or .dylib) instead of a standard Rust binary.
[lib]
name = "jlib"
crate-type = ["cdylib"]

[dependencies]
# 2. You must add the "extension-module" feature.
# This tells PyO3 to link against Python's C API symbols provided by the interpreter.
pyo3 = { version = "0.29.0", features = ["extension-module"] }

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"